--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -26,6 +26,7 @@
 
 .cartItem {
   height: 300px;
+  padding: 5px;
 }
 
 .dot {
@@ -38,6 +39,12 @@
 }
 
 @media screen and (max-width: 666px) {
+  .cartItem {
+    font-size: .8rem;
+    margin-right: 1px;
+    margin-left: 1px;
+  }
+
   .productCard {
     width: 96%;
   }
