--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -35,10 +35,13 @@ body {
   display: flex;
   flex-direction: column;
   background-color: white;
+  box-sizing: border-box;
+  border: 2px solid white;
 }
 
 .productCard:hover {
   border: 2px solid #050177;
+  box-sizing: border-box;
 }
 
 .pointer {
@@ -102,6 +105,10 @@ body {
 }
 
 @media screen and (max-width: 666px) {
+  .checkout-button {
+    width: 120px;
+  }
+
   .button-buy  {
     align-self: center;
   }
